Metadata browser 1.2.0
	Changes:
			- removed support for 'native' corpus-structure-2. Only the adapter is
			still supported; the adapter project has been merged with the old 'cmdi'
			package and is now called 'hybrid'
			- the Spring profiles have been refactored accordingly, 'hybrid-production'
			should be used now; see upgrade instructions for details
			- added an IMEX action for conveniently viewing images in a session (#3897)			

Metadata browser 1.1.2
	Changes:
			- added support and sample configuration for Lana2 authentication (#4493)
	Fixes:
			- corrected display of dates and indication of current version in the version
			information (#4462)
			- fixed erroneous opening of unsupported written resources in Annex on the
			'View' action (#4505)

Metadata browser 1.1.1
	Changes:
			- upgraded to corpus-structure-2 version 1.1.3
			- Spring configuration moved to web application package

Metadata browser 1.1.0
	Changes:
			- development on cs2 profile dropped in favour of the adapter because of the
			  decision to keep using the hybrid archive
			- added support for the 'openhandle' parameter (#4208)
			- added functioning display of version information
			- action buttons available on info files
	Fixes
			- database connection and memory issues (#4026, #4029)
			- downloading of protected resources (#3900, #3965)
			- a number of performance improvements have been applied (#3468)
			- display of resources when the URL scheme does not match (#4345)
			
	For more details, see <https://trac.mpi.nl/milestone/Metadatabrowser%201.1>;
	Configuration details are described in UPGRADE.txt

Metadata browser 1.0-RELEASE (01-04-2014)
    Changes:
            - update dependencies to corpus-structure-2-1.0-beta-3 and Mpgaai-shhaa 1.0.4 
              (#3795 and #3793)
            - incorporate AMS remote interface (#3791) Now uses an interface and either 
              use old ams or the new one depending on the profile